--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -72,33 +72,59 @@ input {
 
 .aboutCont {
   position: relative;
+  /* transition: 0.5s ease-in-out; */
+  overflow: hidden;
+  border: 5px solid silver;
 }
 .aboutImg {
-  transition: 1s ease-out;
-  border: 5px solid brown;
+  overflow: hidden;
+  transition: 0.5s ease-in-out;
+  overflow: hidden;
 }
-.aboutCont:hover .aboutImg .leftBox .RightBox {
-  translate: translateZ(50%, 50%);
+.aboutCont:hover > .aboutImg {
+  transform: scale(1.2);
+  overflow: hidden;
+}
+.aboutCont:hover .RightBox {
+  transform: translateX(11px) translateY(11px) scale(1.3);
+  overflow: hidden;
+}
+
+.aboutCont:hover .leftBox {
+  transform: translateX(-11px) translateY(-11px) scale(1.3);
+  overflow: hidden;
 }
 .leftBox {
-  top: 5vh;
-  left: 5vw;
+  top: 1.5rem;
+  left: 1.5rem;
   border-left: 5px solid sandybrown;
   border-top: 5px solid sandybrown;
-  height: 10%;
-  width: 10%;
+  height: 50px;
+  width: 50px;
   position: absolute;
-  transition: 1s ease-out;
+  transition: 1s ease-in-out;
   z-index: 2;
 }
 .RightBox {
-  bottom: 5vh;
-  right: 5vw;
+  bottom: 1.5rem;
+  right: 1.5rem;
   border-right: 5px solid sandybrown;
   border-bottom: 5px solid sandybrown;
-  height: 10%;
-  width: 10%;
+  height: 50px;
+  width: 50px;
   position: absolute;
   z-index: 2;
-  transition: 1s ease-out;
+  transition: 1s ease-in-out;
+}
+
+.card-effect {
+  overflow: hidden;
+}
+.card-effect:hover * {
+  transition: all 1s ease;
+  transform: translateY(-20px);
+  color: antiquewhite;
+}
+.card-effect:hover {
+  background-color: chocolate;
 }
