--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+
 body {
   margin: 0;
   padding: 0;
@@ -131,3 +133,5 @@ input {
 
 .social-logo{color:white}
 .social-logo:hover{color:#c76f0a }
+
+.typo{font-family: "Satisfy", sans-serif;}
